--- a/index.html
+++ b/index.html
@@ -1,123 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+            crossorigin="anonymous" />
 
-    <title>RECIPE BOOK</title>
-  </head>
-  <body>
-    <header>
-      <h1 class="mt-3 ms-3">RECIPE BOOK</h1>
-      <blockquote class="ms-3">Store all your recipes in a web page</blockquote>
-    </header>
+        <title>RECIPE BOOK</title>
+    </head>
+    <body>
+        <header>
+            <h1 class="mt-3 ms-3">RECIPE BOOK</h1>
+            <blockquote class="ms-3">Store all your recipes in a web page</blockquote>
+        </header>
 
-    <main class="mt-5">
-      <!-- button togler for the recipe form -->
-      <div class="text-center my-5">
-        <button class="btn btn-outline-danger mx-auto" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">ADD A RECIPE</button>
-      </div>
-
-      <!-- start recipe form -->
-      <div class="container my-5 border border-dark border-5 p-4 collapse" id="collapseExample">
-        <form>
-          <div class="row mb-3">
-            <!-- input Recipe name -->
-            <div class="col-6 mb-3">
-              <label for="recipeName" class="form-label">RECIPE NAME</label>
-              <input
-                type="text"
-                class="form-control"
-                id="recipeName"
-                placeholder="ex. Gnocchi"
-              />
-            </div>
-            <!-- input type of meal -->
-            <div class="col-6 mb-3">
-              <label for="mealType" class="form-label bold-label"
-                >MEAL TYPE</label
-              >
-              <select id="mealType" class="form-select" aria-label="Default select example">
-                <option selected class="disabled">select a meal type</option>
-                <option value="appertizer">APPERTIZER</option>
-                <option value="main">MAIN</option>
-                <option value="side">SIDE</option>
-                <option value="dessert">DESSERT</option>
-              </select>
-              <!-- <span id="validationStatus"></span> -->
-            </div>
-          </div>
-
-          <div class="row mb-3">
-            <!-- input serving people -->
-            <div class="col-6 mb-3">
-              <label for="servingPpl" class="form-label">SERVING PEOPLE</label>
-              <input
-                type="text"
-                class="form-control"
-                id="servingPpl"
-                placeholder="ex. 4"
-              />
+        <main class="mt-5">
+            <!-- button togler for the recipe form -->
+            <div class="text-center my-5">
+                <button class="btn btn-outline-danger mx-auto" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseForm" aria-expanded="false" aria-controls="collapseForm">ADD A
+                    RECIPE</button>
             </div>
 
-            <!-- input preparation time -->
-            <div class="col-6 mb-3">
-                <label for="prepTime" class="form-label">PREPARATION TIME</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="prepTime"
-                  placeholder="ex. 20 mins"
-                />
-            </div>
-          </div>
+            <!-- start recipe form -->
+            <div class="container my-5 border border-dark border-5 p-4 collapse" id="collapseForm">
+                <form>
+                    <div class="row mb-3">
+                        <!-- input Recipe name -->
+                        <div class="col-6 mb-3">
+                            <label for="recipeName" class="form-label">RECIPE NAME</label>
+                            <input type="text" class="form-control" id="recipeName" placeholder="ex. Gnocchi" />
+                        </div>
+                        <!-- input type of meal -->
+                        <div class="col-6 mb-3">
+                            <label for="mealType" class="form-label bold-label">MEAL TYPE</label>
+                            <select id="mealType" class="form-select" aria-label="Default select example">
+                                <option selected class="disabled">select a meal type</option>
+                                <option value="appertizer">APPERTIZER</option>
+                                <option value="main">MAIN</option>
+                                <option value="side">SIDE</option>
+                                <option value="dessert">DESSERT</option>
+                            </select>
+                            <!-- <span id="validationStatus"></span> -->
+                        </div>
+                    </div>
 
-          <!-- text area for recipe ingredients -->
-            <div class="col mb-3">
-                <label for="ingredients" class="form-label">INGREDIENTS</label>
-                <textarea name="ingredients" id="ingredients" class="form-control" cols="30" rows="10"></textarea>
-            </div>
+                    <div class="row mb-3">
+                        <!-- input serving people -->
+                        <div class="col-6 mb-3">
+                            <label for="servingPpl" class="form-label">SERVING PEOPLE</label>
+                            <input type="text" class="form-control" id="servingPpl" placeholder="ex. 4" />
+                        </div>
 
-          <div class="text-center">
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
-        </form>
-      </div>
-      <!-- end recipe form -->
-      
-      <!-- Recipe display Section -->
-      <section class="container mb-5">
-          <div class="row text-center">
-            <div id="appertizers" class="col-3 border p-3">
-                <h2 class="text-primary">APPERTIZERS</h2>
-            </div>
-            <div id="mains" class="col-3 border p-3">
-                <h2 class="text-success">MAINS</h2>
-            </div>
-            <div id="sides" class="col-3 border p-3">
-                <h2 class="text-warning">SIDE DISHES</h2>
-            </div>
-            <div id="desserts" class="col-3 border p-3">
-                <h2 class="text-danger">DESSERTS</h2>
-            </div>
-          </div>
-      </section>
-    </main>
+                        <!-- input preparation time -->
+                        <div class="col-6 mb-3">
+                            <label for="prepTime" class="form-label">PREPARATION TIME</label>
+                            <input type="text" class="form-control" id="prepTime" placeholder="ex. 20 mins" />
+                        </div>
+                    </div>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+                    <!-- text area for recipe ingredients -->
+                    <div class="col mb-3">
+                        <label for="ingredients" class="form-label">INGREDIENTS</label>
+                        <textarea name="ingredients" id="ingredients" class="form-control" cols="30"
+                            rows="10"></textarea>
+                    </div>
+
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
+            </div>
+            <!-- end recipe form -->
+
+            <!-- Recipe display Section -->
+            <section class="container mb-5">
+                <div class="row text-center">
+                    <!-- appertizers display column -->
+                    <div id="appertizers" class="col-3 border border-dark p-3">
+                        <h2 class="text-primary mb-5">APPERTIZERS</h2>
+                        <!-- exemple recipe layout 1 -->
+                        <div class="card card-body text-start mb-3 border border-dark">
+                            <h5 class="mb-4 fw-bolder text-center">Bruschette al pomodoro</h5>
+                            <p class="mb-2 fw-bolder">Serving People:<span id="pplSpan" class="px-2 fw-normal">4</span>
+                            </p>
+                            <p class="mb-2 fw-bolder">Preparation Time:<span id="prepSpan" class="px-2 fw-normal">40
+                                    mins</span></p>
+                            <p class="mb-2 fw-bolder">Ingredients:
+                            <p class="border p-1">Bread, tomatoes, garlic, olive oil</p>
+                            </p>
+                        </div>
+
+                         <!-- exemple recipe layout 2 -->
+                        <div class="card card-body text-start mb-3 border border-dark">
+                            <h5 class="mb-4 fw-bolder text-center">Stuffed eggplant</h5>
+                            <p class="mb-2 fw-bolder">Serving People:<span id="pplSpan" class="px-2 fw-normal">3</span>
+                            </p>
+                            <p class="mb-2 fw-bolder">Preparation Time:<span id="prepSpan" class="px-2 fw-normal">50
+                                    mins</span></p>
+                            <p class="mb-2 fw-bolder">Ingredients:
+                            <p class="border p-1">Eggplant, garlic, olive oil, breadcrumbs</p>
+                            </p>
+                        </div>
+                    </div>
+                    <!-- mains display column -->
+                    <div id="mains" class="col-3 border border-dark p-3">
+                        <h2 class="text-success mb-5">MAINS</h2>
+                         <!-- exemple recipe layout 2 -->
+                         <div class="card card-body text-start mb-3 border border-dark">
+                            <h5 class="mb-4 fw-bolder text-center">Lasagna</h5>
+                            <p class="mb-2 fw-bolder">Serving People:<span id="pplSpan" class="px-2 fw-normal">3</span>
+                            </p>
+                            <p class="mb-2 fw-bolder">Preparation Time:<span id="prepSpan" class="px-2 fw-normal">50
+                                    mins</span></p>
+                            <p class="mb-2 fw-bolder">Ingredients:
+                            <p class="border p-1">Pasta sheet, tomato, cheese, ragu</p>
+                            </p>
+                        </div>
+                    </div>
+                    <!-- side dishes display column -->
+                    <div id="sides" class="col-3 border border-dark p-3">
+                        <h2 class="text-warning mb-5">SIDE DISHES</h2>
+                    </div>
+                    <!-- desserts display column -->
+                    <div id="desserts" class="col-3 border border-dark p-3">
+                        <h2 class="text-danger mb-5">DESSERTS</h2>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    </body>
 </html>
