--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <!-- input Recipe name -->
                         <div class="col-6 mb-3">
                             <label for="recipeName" class="form-label">RECIPE NAME</label>
-                            <input type="text" class="form-control" id="recipeName" placeholder="ex. Gnocchi" />
+                            <input type="text" class="form-control" id="recipeName" placeholder="ex. Gnocchi" required/>
                         </div>
                         <!-- input type of meal -->
                         <div class="col-6 mb-3">
@@ -45,7 +45,6 @@
                                 <option value="side">SIDE</option>
                                 <option value="dessert">DESSERT</option>
                             </select>
-                            <!-- <span id="validationStatus"></span> -->
                         </div>
                     </div>
 
@@ -67,7 +66,7 @@
                     <div class="col mb-3">
                         <label for="ingredients" class="form-label">INGREDIENTS</label>
                         <textarea name="ingredients" id="ingredients" class="form-control" cols="30"
-                            rows="10"></textarea>
+                            rows="10" required></textarea>
                     </div>
 
                     <div class="text-center">
@@ -93,6 +92,7 @@
                             <p class="mb-2 fw-bolder">Ingredients:
                             <p class="border p-1">Bread, tomatoes, garlic, olive oil</p>
                             </p>
+                            <button type="button" class="btn btn-outline-danger btn-sm mx-5">Delete</button>
                         </div>
 
                          <!-- exemple recipe layout 2 -->
