--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <!-- start recipe form -->
             <div class="container my-5 border border-dark border-5 p-4 collapse" id="collapseForm">
-                <form>
+                <form id="recipeForm">
                     <div class="row mb-3">
                         <!-- input Recipe name -->
                         <div class="col-6 mb-3">
@@ -80,10 +80,11 @@
             <section class="container mb-5">
                 <div class="row text-center">
                     <!-- appertizers display column -->
-                    <div id="appertizers" class="col-3 border border-dark p-3">
+                    <div class="col-3 border border-dark p-3">
                         <h2 class="text-primary mb-5">APPERTIZERS</h2>
+                        <div id="appertizers"></div>
                         <!-- exemple recipe layout 1 -->
-                        <div class="card card-body text-start mb-3 border border-dark">
+                        <!-- <div class="card card-body text-start mb-3 border border-dark">
                             <h5 class="mb-4 fw-bolder text-center">Bruschette al pomodoro</h5>
                             <p class="mb-2 fw-bolder">Serving People:<span id="pplSpan" class="px-2 fw-normal">4</span>
                             </p>
@@ -93,42 +94,22 @@
                             <p class="border p-1">Bread, tomatoes, garlic, olive oil</p>
                             </p>
                             <button type="button" class="btn btn-outline-danger btn-sm mx-5">Delete</button>
-                        </div>
-
-                         <!-- exemple recipe layout 2 -->
-                        <div class="card card-body text-start mb-3 border border-dark">
-                            <h5 class="mb-4 fw-bolder text-center">Stuffed eggplant</h5>
-                            <p class="mb-2 fw-bolder">Serving People:<span id="pplSpan" class="px-2 fw-normal">3</span>
-                            </p>
-                            <p class="mb-2 fw-bolder">Preparation Time:<span id="prepSpan" class="px-2 fw-normal">50
-                                    mins</span></p>
-                            <p class="mb-2 fw-bolder">Ingredients:
-                            <p class="border p-1">Eggplant, garlic, olive oil, breadcrumbs</p>
-                            </p>
-                        </div>
+                        </div> -->
                     </div>
                     <!-- mains display column -->
-                    <div id="mains" class="col-3 border border-dark p-3">
+                    <div class="col-3 border border-dark p-3">
                         <h2 class="text-success mb-5">MAINS</h2>
-                         <!-- exemple recipe layout 2 -->
-                         <div class="card card-body text-start mb-3 border border-dark">
-                            <h5 class="mb-4 fw-bolder text-center">Lasagna</h5>
-                            <p class="mb-2 fw-bolder">Serving People:<span id="pplSpan" class="px-2 fw-normal">3</span>
-                            </p>
-                            <p class="mb-2 fw-bolder">Preparation Time:<span id="prepSpan" class="px-2 fw-normal">50
-                                    mins</span></p>
-                            <p class="mb-2 fw-bolder">Ingredients:
-                            <p class="border p-1">Pasta sheet, tomato, cheese, ragu</p>
-                            </p>
-                        </div>
+                        <div id="mains"></div>
                     </div>
                     <!-- side dishes display column -->
-                    <div id="sides" class="col-3 border border-dark p-3">
+                    <div class="col-3 border border-dark p-3">
                         <h2 class="text-warning mb-5">SIDE DISHES</h2>
+                        <div id="sides"></div>
                     </div>
                     <!-- desserts display column -->
-                    <div id="desserts" class="col-3 border border-dark p-3">
+                    <div class="col-3 border border-dark p-3">
                         <h2 class="text-danger mb-5">DESSERTS</h2>
+                        <div id="desserts"></div>
                     </div>
                 </div>
             </section>
@@ -138,5 +119,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
+
+        <!-- Custom Scripts -->
+        <script src="./js/recipeManager.js"></script>
+        <script src="./js/app.js"></script>
     </body>
 </html>
