update methods name

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <!-- input type of meal -->
                         <div class="col-6 mb-3">
                             <label for="mealType" class="form-label bold-label">MEAL TYPE</label>
-                            <select id="mealType" class="form-select" aria-label="Default select example">
+                            <select id="mealType" class="form-select" aria-label="Default select example" required>
                                 <option selected class="disabled">select a meal type</option>
                                 <option value="appertizer">APPERTIZER</option>
                                 <option value="main">MAIN</option>
